# cpp_perfromance

./: .gitignore
benchmarks/11_amortized_time_complexity/: 11_amortized_time_complexity.cpp  CMakeLists.txt
benchmarks/12_memory/: 12_memory.cpp  CMakeLists.txt
benchmarks/13_unordered_sets_and_maps/: 13_unordered_sets_and_maps.cpp  CMakeLists.txt
benchmarks/14_return_first_n_elements_with_high_rank/: 14_return_first_n_elements_with_high_rank.cpp  CMakeLists.txt
benchmarks/15_string_view/: 15_string_view.cpp  CMakeLists.txt
benchmarks/16_parallel_arrays/: 16_parallel_arrays.cpp  CMakeLists.txt
benchmarks/17_standard_algorithms_finding/: 17_standard_algorithms_generating_finding.cpp  CMakeLists.txt
benchmarks/17_standard_algorithms_for_each/: 17_standard_algorithms_for_each.cpp  CMakeLists.txt
benchmarks/17_standard_algorithms_generating_elements/: 17_standard_algorithms_generating_elements.cpp  CMakeLists.txt
benchmarks/4_rule_of_zero/: 4_rule_of_zero.cpp  CMakeLists.txt
benchmarks/5_pass_by_value_vectors/: 5_pass_by_value_vectors.cpp  CMakeLists.txt
benchmarks/6_lambda/: 6_lambda.cpp  CMakeLists.txt
benchmarks/9_lambda_as_std_function/: 9_lambda_as_std_function.cpp  CMakeLists.txt
tests/: 10_generic_lambdas.cpp  17_standard_algorithms.cpp  18_projections_in_range_library.cpp  19_data_structure_that_can_be_used_in_generic_algorithm.cpp  1_deduction_auto.cpp  20_ranges.cpp  21_placement_new.cpp  22_alignment.cpp  23_small_objects_optimization.cpp  24_custom_memory_allocations.cpp  25_consteval.cpp  26_constraints_and_concepts.cpp  27_optional.cpp  28_tuple.cpp  29_variadic_parameter_pack.cpp  2_const_and_mutable_reference.cpp  30_variants.cpp  31_proxy_objects.cpp  32_pipe_operator.cpp  33_condition_variables.cpp  34_barriers.cpp  35_latches.cpp  36_coroutines.cpp  37_any.cpp  38_semaphores.cpp  3_rule_of_five.cpp  5_pass_by_value.cpp  7_lambda_as_function_pointer.cpp  8_lambda_types.cpp  CMakeLists.txt  main.cpp
